@@ -83,7 +83,7 @@ public class PreloaderBundleGenerator extends Generator {
 		if (target.exists()) {
 			if (!target.deleteDirectory()) throw new RuntimeException("Couldn't clean target path '" + target + "'");
 		}
-		ArrayList<Asset> assets = new ArrayList<Asset>();
+		ArrayList<Asset> assets = new ArrayList<>();
 		copyDirectory(source, target, assetFilter, assets);
 
 		// Now collect classpath files and copy to assets
@@ -104,7 +104,7 @@ public class PreloaderBundleGenerator extends Generator {
 			}
 		}
 
-		HashMap<String, ArrayList<Asset>> bundles = new HashMap<String, ArrayList<Asset>>();
+		HashMap<String, ArrayList<Asset>> bundles = new HashMap<>();
 		for (Asset asset : assets) {
 			String bundleName = assetFilter.getBundleName(asset.file.path());
 			if (bundleName == null) {
@@ -112,7 +112,7 @@ public class PreloaderBundleGenerator extends Generator {
 			}
 			ArrayList<Asset> bundleAssets = bundles.get(bundleName);
 			if (bundleAssets == null) {
-				bundleAssets = new ArrayList<Asset>();
+				bundleAssets = new ArrayList<>();
 				bundles.put(bundleName, bundleAssets);
 			}
 			bundleAssets.add(asset);
@@ -162,8 +162,7 @@ public class PreloaderBundleGenerator extends Generator {
 		assets.add(new Asset(destDir.path(), destDir, AssetType.Directory));
 		destDir.mkdirs();
 		FileWrapper[] files = sourceDir.list();
-		for (int i = 0, n = files.length; i < n; i++) {
-			FileWrapper srcFile = files[i];
+		for (FileWrapper srcFile : files) {
 			if (srcFile.isDirectory()) {
 				FileWrapper destFile = destDir.child(srcFile.name());
 				copyDirectory(srcFile, destFile, filter, assets);
@@ -175,7 +174,7 @@ public class PreloaderBundleGenerator extends Generator {
 	}
 
 	private AssetFilter getAssetFilter (GeneratorContext context) {
-		ConfigurationProperty assetFilterClassProperty = null;
+		ConfigurationProperty assetFilterClassProperty;
 		try {
 			assetFilterClassProperty = context.getPropertyOracle().getConfigurationProperty("gdx.assetfilterclass");
 		} catch (BadPropertyValueException e) {
@@ -187,7 +186,7 @@ public class PreloaderBundleGenerator extends Generator {
 		String assetFilterClass = assetFilterClassProperty.getValues().get(0);
 		if (assetFilterClass == null) return new DefaultAssetFilter();
 		try {
-			return (AssetFilter)Class.forName(assetFilterClass).newInstance();
+			return (AssetFilter)Class.forName(assetFilterClass).getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			throw new RuntimeException("Couldn't instantiate custom AssetFilter '" + assetFilterClass
 				+ "', make sure the class is public and has a public default constructor", e);
@@ -195,7 +194,7 @@ public class PreloaderBundleGenerator extends Generator {
 	}
 
 	private String getAssetPath (GeneratorContext context) {
-		ConfigurationProperty assetPathProperty = null;
+		ConfigurationProperty assetPathProperty;
 		try {
 			assetPathProperty = context.getPropertyOracle().getConfigurationProperty("gdx.assetpath");
 		} catch (BadPropertyValueException e) {
@@ -211,7 +210,6 @@ public class PreloaderBundleGenerator extends Generator {
 			throw new RuntimeException(
 				"No gdx.assetpath defined. Add <set-configuration-property name=\"gdx.assetpath\" value=\"relative/path/to/assets/\"/> to your GWT projects gwt.xml file");
 		} else {
-			ArrayList<String> existingPaths = new ArrayList<String>();
 			String[] tokens = paths.split(",");
 			for (String token : tokens) {
 				System.out.println(token);
@@ -225,7 +223,7 @@ public class PreloaderBundleGenerator extends Generator {
 	}
 
 	private String getAssetOutputPath (GeneratorContext context) {
-		ConfigurationProperty assetPathProperty = null;
+		ConfigurationProperty assetPathProperty;
 		try {
 			assetPathProperty = context.getPropertyOracle().getConfigurationProperty("gdx.assetoutputpath");
 		} catch (BadPropertyValueException e) {
@@ -238,7 +236,6 @@ public class PreloaderBundleGenerator extends Generator {
 		if (paths == null) {
 			return null;
 		} else {
-			ArrayList<String> existingPaths = new ArrayList<String>();
 			String[] tokens = paths.split(",");
 			String path = null;
 			for (String token : tokens) {
@@ -254,12 +251,10 @@ public class PreloaderBundleGenerator extends Generator {
 	}
 
 	private List<String> getClasspathFiles (GeneratorContext context) {
-		List<String> classpathFiles = new ArrayList<String>();
+		List<String> classpathFiles = new ArrayList<>();
 		try {
 			ConfigurationProperty prop = context.getPropertyOracle().getConfigurationProperty("gdx.files.classpath");
-			for (String value : prop.getValues()) {
-				classpathFiles.add(value);
-			}
+			classpathFiles.addAll(prop.getValues());
 		} catch (BadPropertyValueException e) {
 			// Ignore
 		}
